Improve Northbound module performance. Clean up dependencies. Adjust code to use standard Java.